# egui-video

./: Cargo.toml  README.md
examples/: main.rs
src/: audio.rs  hls.rs  lib.rs  media_player.rs  overlay.rs  player.rs
src/ffmpeg/: decode.rs  demux.rs  mod.rs  resample.rs  scale.rs
src/stream/: ffmpeg.rs  mod.rs
src/subtitle/: ass.rs  mod.rs  srt.rs
