[package]
name = "egui-video"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "a video player for egui"
repository = "https://github.com/n00kii/egui-video"
readme = "README.md"
authors = ["n00kii"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["subtitles", "hls"]
subtitles = ["dep:nom"]
hls = ["dep:m3u8-rs", "dep:ureq", "dep:url", "dep:itertools"]

[dependencies]
egui = "^0.29"
anyhow = "^1.0.86"
cpal = { version = "0.15.3", features = ["oboe-shared-stdcxx"] }
ffmpeg-rs-raw = { git = "https://git.v0l.io/Kieran/ffmpeg-rs-raw.git", rev = "b8d45e82893af81c4c492f365539a93b9a9fab69" }
atomic = "0.6.0"
log = "0.4.22"
egui_inbox = "^0.6.0"

nom = { version = "7.1.3", optional = true }
ureq = { version = "2.10.1", optional = true }
m3u8-rs = { version = "6.0.0", optional = true }
url = { version = "2.5.2", optional = true }
itertools = { version = "0.13.0", optional = true }

[dev-dependencies]
eframe = "0.29"
env_logger = "0.11.5"
