[package]
name = "egui-video"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "a video player for egui"
repository = "https://github.com/n00kii/egui-video"
readme = "README.md"
authors = ["n00kii"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["subtitles", "hls"]
subtitles = ["dep:nom"]
hls = ["dep:m3u8-rs", "dep:ureq", "dep:url", "dep:itertools"]

[dependencies]
egui = "0.31.1"
anyhow = "^1.0.86"
cpal = { version = "0.15.3", features = ["oboe-shared-stdcxx"] }
ffmpeg-rs-raw = { git = "https://git.v0l.io/Kieran/ffmpeg-rs-raw.git", rev = "ea275802206f90c041c1c0184e5776069175a26b" }
atomic = "0.6.0"
log = "0.4.22"
egui_inbox = "0.8.0"

nom = { version = "8.0.0", optional = true }
ureq = { version = "3.0.10", optional = true }
m3u8-rs = { version = "6.0.0", optional = true }
url = { version = "2.5.2", optional = true }
itertools = { version = "0.14.0", optional = true }

[dev-dependencies]
eframe = "0.31.1"
env_logger = "0.11.5"
