[package]
name = "egui-video"
version = "0.8.0"
edition = "2024"
license = "MIT"
description = "a video player for egui"
repository = "https://github.com/n00kii/egui-video"
readme = "README.md"
authors = ["n00kii", "v0l"]
rust-version = "1.88"

[features]
default = ["ffmpeg"]
ffmpeg = ["dep:ffmpeg-rs-raw"]
subtitles = ["dep:nom"]
hls = ["dep:m3u8-rs", "dep:ureq", "dep:url", "dep:itertools"]
default-overlay = []

[dependencies]
egui = "0.33"
anyhow = "1"
cpal = { version = "0.17" }
ffmpeg-rs-raw = { git = "https://git.v0l.io/Kieran/ffmpeg-rs-raw.git", rev = "c9c6086cefe976012d460e2a7e88ce531d79db00", optional = true }
log = "0.4"
bungee-sys = "0.1"

nom = { version = "8.0", optional = true }
ureq = { version = "3.0", optional = true }
m3u8-rs = { version = "6.0", optional = true }
url = { version = "2.5", optional = true }
itertools = { version = "0.14", optional = true }

[dev-dependencies]
eframe = "0.33"
env_logger = "0.11"
